moved to folders

--- a/most_common_0/CMakeLists.txt
+++ b/most_common_0/CMakeLists.txt
@@ -2,7 +2,7 @@
 cmake_minimum_required(VERSION 3.10)
 
 # Define the project name and language
-project(asm_dynamic C)
+project(most_common_0 C)
 
 # Set the C standard to C11 (modify as needed)
 set(CMAKE_C_STANDARD 11)
@@ -11,6 +11,5 @@ set(CMAKE_C_STANDARD_REQUIRED ON)
 # Force compilation for the Apple M1 (arm64)
 set(CMAKE_OSX_ARCHITECTURES "arm64")
 
-add_subdirectory(add_blr)
-add_subdirectory(most_common_0)
-add_subdirectory(trip_random)
+# Add an executable target with the source file(s)
+add_executable(most_common_0 main.c)
