--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,3 +14,4 @@ set(CMAKE_OSX_ARCHITECTURES "arm64")
 add_subdirectory(add_blr)
 add_subdirectory(most_common_0)
 add_subdirectory(trip_random)
+add_subdirectory(static_asm)
