--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,5 +13,10 @@ set(CMAKE_OSX_ARCHITECTURES "arm64")
 
 add_subdirectory(add_blr)
 add_subdirectory(most_common_0)
+add_subdirectory(most_common_1)
+add_subdirectory(most_common_2)
 add_subdirectory(trip_random)
 add_subdirectory(static_asm)
+add_subdirectory(ldr_static)
+add_subdirectory(static_store)
+add_subdirectory(sub_mov_ldr_str_variations)
