loop with constant

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,3 +19,4 @@ add_subdirectory(static_asm)
 add_subdirectory(ldr_static)
 add_subdirectory(static_store)
 add_subdirectory(sub_mov_ldr_str_variations)
+add_subdirectory(loop_c)
