Added script that generates random asm blocks. Added ten generated projects.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ add_subdirectory(most_common_0)
 add_subdirectory(most_common_1)
 add_subdirectory(most_common_2)
 add_subdirectory(static_asm)
+add_subdirectory(static_random_asm)
 add_subdirectory(ldr_static)
 add_subdirectory(static_store)
 add_subdirectory(sub_mov_ldr_str_variations)
