Added ten more generated projects.

--- a/static_random_asm/CMakeLists.txt
+++ b/static_random_asm/CMakeLists.txt
@@ -8,3 +8,13 @@ add_subdirectory(v6)
 add_subdirectory(v7)
 add_subdirectory(v8)
 add_subdirectory(v9)
+add_subdirectory(v10)
+add_subdirectory(v11)
+add_subdirectory(v12)
+add_subdirectory(v13)
+add_subdirectory(v14)
+add_subdirectory(v15)
+add_subdirectory(v16)
+add_subdirectory(v17)
+add_subdirectory(v18)
+add_subdirectory(v19)
