--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,3 +21,4 @@ add_subdirectory(ldr_static)
 add_subdirectory(static_store)
 add_subdirectory(sub_mov_ldr_str_variations)
 add_subdirectory(loop_c)
+add_subdirectory(blocks)
