Added new generated projects and added missing loops to existing projects.

--- a/static_random_asm/CMakeLists.txt
+++ b/static_random_asm/CMakeLists.txt
@@ -18,3 +18,23 @@ add_subdirectory(v16)
 add_subdirectory(v17)
 add_subdirectory(v18)
 add_subdirectory(v19)
+add_subdirectory(v20)
+add_subdirectory(v21)
+add_subdirectory(v22)
+add_subdirectory(v23)
+add_subdirectory(v24)
+add_subdirectory(v25)
+add_subdirectory(v26)
+add_subdirectory(v27)
+add_subdirectory(v28)
+add_subdirectory(v29)
+add_subdirectory(v30)
+add_subdirectory(v31)
+add_subdirectory(v32)
+add_subdirectory(v33)
+add_subdirectory(v34)
+add_subdirectory(v35)
+add_subdirectory(v36)
+add_subdirectory(v37)
+add_subdirectory(v38)
+add_subdirectory(v39)
